fixed navbar overflow-y issue

--- a/src/layouts/sass/footer.scss
+++ b/src/layouts/sass/footer.scss
@@ -16,6 +16,8 @@
         display: flex;
         justify-content: center;
 
+        overflow: hidden;
+
         .footer-link-wrapper {
             display: flex;
             gap: 5vw;
